--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
+
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
